Fix overlapping hero section issues

--- a/src/static/stylesheets/base.scss
+++ b/src/static/stylesheets/base.scss
@@ -328,6 +328,7 @@ em {
 
 .page-container {
   height: 100%;
+  overflow: hidden;
 
   .page-block {
     &:last-child {
